# StorePulse

./: .gitignore  ABSOLUTE_VERIFICATION.md  CHANGELOG_MACOS_FIX.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  GITHUB_SETUP.md  INSTALLATION_FIX_SUMMARY.md  MACOS_SETUP_FIXES.md  MTech_Project_Report.html  ONBOARDING_UPDATES.md  PROJECT_BIBLE.md  QUICKSTART.md  QUICK_FIX_RUST.md  QUICK_INSTALL_MACOS.md  README.md  RESTART_StorePulse.sh  SETUP_MACOS.sh  SETUP_MACOS_ONELINER.sh  SETUP_WINDOWS.ps1  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  backend_only.sh  config.example.json  create_training_data.py  debug_forecast.py  dev.sh  generate_pro_sample.py  generate_sample.py  launch.sh  nb_ingarch_literature.html  package-lock.json  presentation_assets.html  pytest.ini  requirements.txt  sample_store_data.csv  sample_store_data_pro.csv  start.sh  storepulse_book.html  storepulse_limits_book.html
api/: ensure_directories.py  index.js  index.py  main.py  package.json  pyproject.toml  requirements.txt  simple_main.py
api/core/: calibrate.py  db.py  feats.py  forecast_service.py  inventory.py  metrics.py  report_service.py  schemas.py
api/routes/: __init__.py  backtest.py  data.py  export.py  files.py  forecast.py  metrics.py  reports.py  settings.py  train.py  whatif.py
data/: 1_year_lite.csv  1_year_pro.csv  3_years_lite.csv  3_years_pro.csv  demo_lite.csv  demo_lite.json  demo_lite.xlsx  demo_pro.csv  demo_pro.json  demo_pro.xlsx  (+1 more)
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: main.json
src/src-tauri/icons/: icon.icns
src/src-tauri/src/: main.rs
(+134 files in other folders)
