[project]
name = "storepulse-api"
version = "0.1.0"
description = "Local FastAPI backend for StorePulse"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pandas>=2.2.2",
  "numpy>=2.0.0",
  "scikit-learn>=1.5.0",
  "pymc>=5.15.0",
  "lightgbm>=4.3.0",
  "statsmodels>=0.14.2",
  "sqlalchemy>=2.0.28",
  "aiosqlite>=0.20.0",
  "psutil>=5.9.0",
  "sse-starlette>=1.6.1",
  "arviz>=0.17.1",
  "reportlab>=4.0.4",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1.3",
  "xlrd>=2.0.1",
  "joblib>=1.4.2",
  "scipy>=1.13.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.7",
  "pytest>=8.2.0"
]

[tool.uv]
index-url = "https://pypi.org/simple"
