[package]
name = "storepulse"
version = "0.1.0"
edition = "2021"
description = "StorePulse desktop app"
license = "Proprietary"

[dependencies]
tauri = { version = "2.0.0", features = ["wry", "specta", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
